<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01var08</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Top Left</string>
    <string name="button2">Top Right</string>
    <string name="button3">Bottom left</string>
    <string name="button4">Center</string>
    <string name="button5">Bottom right</string>
    <string name="textview"></string>
    <string name="outputtextview"></string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
     <string name="title_activity_practical_test01_secondary">Second Activity</string>
    
    <string name="navigate_to_secondary_activity">Navigate to secondary activity</string>

</resources>