<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pub.cs.systems.eim.practicaltest01var08.PracticalTest01Var08MainActivity" >

    <Button
        android:id="@+id/navigate_to_secondary_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/navigate_to_secondary_activity"/>
    
    
     <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="text"
        android:enabled="false"
        android:text="@string/textview"
        android:visibility="visible" />
    
    
     <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:gravity="center"
        android:rowCount="3" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_gravity="center"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:text="@string/button4" />
        
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/button5" />
        
    </GridLayout>
   
</LinearLayout>
